| Summary: | ASTERISK-22376: [patch] memory leaks | ||
| Reporter: | John Hardin (jhardin) | Labels: | |
| Date Opened: | 2013-08-23 12:04:07 | Date Closed: | 2013-08-29 16:40:05 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) memleak.patch ( 1) memleak2.patch | |
| Description: | Running Asterisk 12 under valgrind exposed a few minor memory leaks. Patch is attached. | ||
| Comments: | By: John Hardin (jhardin) 2013-08-23 13:53:19.211-0500 cdr object leak By: Matt Jordan (mjordan) 2013-08-23 14:52:28.861-0500 Awesome - thanks John | ||